add armor
